# ChangeLog for app-editors/elvis
# Copyright 2002-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-editors/elvis/ChangeLog,v 1.33 2007/09/21 21:24:30 hawking Exp $

*elvis-2.2.0-r3 (21 Sep 2007)

  21 Sep 2007; Ali Polatel <hawking@gentoo.org>
  +files/ft2.3-symbol-collision-fix.patch, +elvis-2.2.0-r3.ebuild:
  revbump. add patch to fix symbol collision between elvis and freetype.
  bug 189271, thanks to Gordon Malm.

  22 Jul 2007; David Shakaryan <omp@gentoo.org> elvis-2.2.0-r1.ebuild,
  elvis-2.2.0-r2.ebuild:
  Remove virtual/x11 from dependencies.

  09 Feb 2007; Fabian Groffen <grobian@gentoo.org> elvis-2.2.0-r1.ebuild:
  Dropped ppc-macos keyword, see you in prefix

  24 Oct 2006; Mike Kelly <pioto@gentoo.org> elvis-2.2.0-r2.ebuild:
  Dropping ~ppc-macos keyword

  20 Sep 2006; Mike Kelly <pioto@gentoo.org> elvis-2.2.0-r2.ebuild:
  Forgot a DEPEND on eselect-vi

*elvis-2.2.0-r2 (20 Sep 2006)

  20 Sep 2006; Mike Kelly <pioto@gentoo.org>  elvis-2.2.0-r2.ebuild:
  Adding support for eselect vi. Currently package.masked. See bug #147857

  27 Aug 2006; Michael Sterrett <mr_bones_@gentoo.org> -elvis-2.2.0.ebuild:
  clean out older, non-modX ebuild

  22 Jul 2006; Thomas Cort <tcort@gentoo.org> elvis-2.2.0-r1.ebuild:
  Stable on alpha and amd64 wrt Bug #140618.

  20 Jul 2006; Markus Rothe <corsair@gentoo.org> elvis-2.2.0-r1.ebuild:
  Stable on ppc64; bug #140618

  18 Jul 2006; Joshua Jackson <tsunam@gentoo.org> elvis-2.2.0-r1.ebuild:
  Stable x86; bug #140618

  16 Jul 2006; Jason Wever <weeve@gentoo.org> elvis-2.2.0-r1.ebuild:
  Stable on SPARC wrt bug #140618.

  16 Jul 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  elvis-2.2.0-r1.ebuild:
  ppc stable, bug #140618

*elvis-2.2.0-r1 (20 Jan 2006)

  20 Jan 2006; Marcelo Goes <vanquirius@gentoo.org>
  -files/elvis-2.1.4-keysym.patch, -elvis-2.1.4.ebuild,
  -elvis-2.1.4-r1.ebuild, +elvis-2.2.0-r1.ebuild:
  Remove old ebuilds, make modular X friendly.
