@@ -1,24 +1,27 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX ft2.3-symbol-collision-fix.patch 2396 RMD160 c80ec1c5e7a15e2dea185e2d0d83da5fccd39b1b SHA1 3957feb87b9d8fe0a3a58ec8715d0c328545c086 SHA256 59960b0498863f0793b5c33a824efc62c6255d26455d3ec6c87f62cb1969f008
 MD5 20afda897841eead2cda535d8cccbe32 files/ft2.3-symbol-collision-fix.patch 2396
 RMD160 c80ec1c5e7a15e2dea185e2d0d83da5fccd39b1b files/ft2.3-symbol-collision-fix.patch 2396
 SHA256 59960b0498863f0793b5c33a824efc62c6255d26455d3ec6c87f62cb1969f008 files/ft2.3-symbol-collision-fix.patch 2396
 DIST elvis-2.2_0.tar.gz 1439293 RMD160 9867a3941a84a3db0bcfe4e36dd14132fbcf5805 SHA1 8c16574b6d36529735b8ced70972ddaf6275a477 SHA256 9a8466b2293798441056bc279736af3a616baaba2f11940396cc60ff71924ea0
-EBUILD elvis-2.2.0-r1.ebuild 1902 RMD160 018b47107ec0ebcba622c9c15cd48ff8b5149d79 SHA1 97199dec8728b57702304350d4302be3a968066b SHA256 78b7ddb1e0fd8b6a7e08b5dc3ea8e53851b9f4173dc998c8855b12d74ba99231
-MD5 205de09de80499d33f599dd7f5b8f5da elvis-2.2.0-r1.ebuild 1902
-RMD160 018b47107ec0ebcba622c9c15cd48ff8b5149d79 elvis-2.2.0-r1.ebuild 1902
-SHA256 78b7ddb1e0fd8b6a7e08b5dc3ea8e53851b9f4173dc998c8855b12d74ba99231 elvis-2.2.0-r1.ebuild 1902
-EBUILD elvis-2.2.0-r2.ebuild 2149 RMD160 5b36e1d83e656d27887ff613f3868dbfee5f0f46 SHA1 dd88ca73def7f2e55acfc4f9f4361cda536e0b1e SHA256 23a2476d8fda2f15061a058111f458c56cd3c8d0e1ef7ffaef45cd39161e8edb
-MD5 b2cf77f6194d890fc4c40f3bc80135c1 elvis-2.2.0-r2.ebuild 2149
-RMD160 5b36e1d83e656d27887ff613f3868dbfee5f0f46 elvis-2.2.0-r2.ebuild 2149
-SHA256 23a2476d8fda2f15061a058111f458c56cd3c8d0e1ef7ffaef45cd39161e8edb elvis-2.2.0-r2.ebuild 2149
-EBUILD elvis-2.2.0-r3.ebuild 2251 RMD160 df60e935456fb8dd484608328bd57d6debebd147 SHA1 e46a90ad49d958344d7505e9121954bf2b841543 SHA256 941f883378b58f09ae9904afa6a6e72fcc8353bca7b31bb4983d9b5219c61761
-MD5 e559ee1845e152a63a87882f639fc9b0 elvis-2.2.0-r3.ebuild 2251
-RMD160 df60e935456fb8dd484608328bd57d6debebd147 elvis-2.2.0-r3.ebuild 2251
-SHA256 941f883378b58f09ae9904afa6a6e72fcc8353bca7b31bb4983d9b5219c61761 elvis-2.2.0-r3.ebuild 2251
-MISC ChangeLog 3884 RMD160 8cad59f935135a564f6d5da2b9b708ed738a30a6 SHA1 d98f7105a91a1f72fca5b35777b46797d844e2f3 SHA256 3796e9d125fa935f6141fa9cd5ee3014983fc20d2517978de85e4f6f0a8a16c7
-MD5 06af9ffd3960d6e9e0708e74da7370b0 ChangeLog 3884
-RMD160 8cad59f935135a564f6d5da2b9b708ed738a30a6 ChangeLog 3884
-SHA256 3796e9d125fa935f6141fa9cd5ee3014983fc20d2517978de85e4f6f0a8a16c7 ChangeLog 3884
+EBUILD elvis-2.2.0-r1.ebuild 1879 RMD160 f72124242155f6e84f8b74eebdd2883195e70ec0 SHA1 6d7e12f99ed78184c60c9646f7bc58b0a1df400c SHA256 9e73893f2c8d0409f3c8c4f2afd0d30d212d1495e9bfbe3ebca3082e38455cc7
+MD5 15926945763bc96e2e1260761616d4d9 elvis-2.2.0-r1.ebuild 1879
+RMD160 f72124242155f6e84f8b74eebdd2883195e70ec0 elvis-2.2.0-r1.ebuild 1879
+SHA256 9e73893f2c8d0409f3c8c4f2afd0d30d212d1495e9bfbe3ebca3082e38455cc7 elvis-2.2.0-r1.ebuild 1879
+EBUILD elvis-2.2.0-r2.ebuild 2126 RMD160 d03ce275f15814e5ec126f23907be0dfe2cf5e7d SHA1 7bcfc1ec253098c90f3e5b92e971f223cf5f60d1 SHA256 51ecc57bb4d0c48e17be9745d7ac18f3fdc323e88e00a818364346e1c14413c6
+MD5 cf398b1cf329fd98ca4d307a083160d0 elvis-2.2.0-r2.ebuild 2126
+RMD160 d03ce275f15814e5ec126f23907be0dfe2cf5e7d elvis-2.2.0-r2.ebuild 2126
+SHA256 51ecc57bb4d0c48e17be9745d7ac18f3fdc323e88e00a818364346e1c14413c6 elvis-2.2.0-r2.ebuild 2126
+EBUILD elvis-2.2.0-r3.ebuild 2224 RMD160 575fc4386ccc4807e6e0c40d31b03760c76649a8 SHA1 2f193d03ff57dba9d7d254ebdd6cbc59ae1a0645 SHA256 bd5cd0d8ab2cdd93e1d02fa004b5483b01b2ceccc23061af0743523befe4a90f
+MD5 ab4d15cad5f48e288168b06e9401a673 elvis-2.2.0-r3.ebuild 2224
+RMD160 575fc4386ccc4807e6e0c40d31b03760c76649a8 elvis-2.2.0-r3.ebuild 2224
+SHA256 bd5cd0d8ab2cdd93e1d02fa004b5483b01b2ceccc23061af0743523befe4a90f elvis-2.2.0-r3.ebuild 2224
+MISC ChangeLog 4076 RMD160 c8bf0690f7e745bc31e69dc763f1732795b88300 SHA1 f490989db92f40fecd2f06e1f5a5c2d4710f4368 SHA256 875c220cf6a17b22de2652b81e96a1229b986b0d65fd2ee35abf4b567a7cc770
+MD5 a1269f054bfcb03c93109f6fb8a7b6b4 ChangeLog 4076
+RMD160 c8bf0690f7e745bc31e69dc763f1732795b88300 ChangeLog 4076
+SHA256 875c220cf6a17b22de2652b81e96a1229b986b0d65fd2ee35abf4b567a7cc770 ChangeLog 4076
 MISC metadata.xml 156 RMD160 3e105a159e09ab3231aaa16b01919bcfbf58a0a8 SHA1 fe63ba71f6fd04f1e293fb238af2eba994b0335d SHA256 64d20c782589b423a6e75ba6fff7edead1ec8fbae742d27dd57f5299e8328500
 MD5 f3583430b2f7b0686cafd606b08bf203 metadata.xml 156
 RMD160 3e105a159e09ab3231aaa16b01919bcfbf58a0a8 metadata.xml 156
@@ -32,3 +35,10 @@ SHA256 3fabe072b56fb0456317219876619e7b16dfe7358fecf4661033603d923ba55e files/di
 MD5 8aa501c191936cb24f0bdc10b843de5b files/digest-elvis-2.2.0-r3 238
 RMD160 0d484b3a40ab5b0f24140528dbd58bb5248f6b75 files/digest-elvis-2.2.0-r3 238
 SHA256 3fabe072b56fb0456317219876619e7b16dfe7358fecf4661033603d923ba55e files/digest-elvis-2.2.0-r3 238
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.7 (GNU/Linux)
+
+iD8DBQFHDG5UNQqtfCuFneMRAkdHAJ9atNZsDmCeziaQqE1Rt947CWVjKACfSMyW
+jdP+W1u5Q+siauFWolYvahA=
+=Y4kL
+-----END PGP SIGNATURE-----
